# eluent

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/source/: conf.py  index.rst  installation.md  usage.md
eluent/: __init__.py
eluent/cli_module/: cli.py  eval.py  hyperprep.py  io.py  percentile.py  predict.py  split.py  train.py  utils.py
eluent/utils/: datasets.py  datasets_io.py  package_data.py  plotting.py
eluent/utils/splitting/: __init__.py  bin_packing.py  decorators.py  disjoint_set.py  faiss.py  grouping.py  plot.py  scaffold.py  splitter.py  top_k.py  utils.py
test/scripts/: run-percentile.sh  run-split-k.sh  run-split.sh  run-tests.sh
